working on moveLeft

--- a/doc/mps.tex
+++ b/doc/mps.tex
@@ -72,7 +72,9 @@ L^{a_2,a'_2}_{b_2} = \sum_{a_1,b_1,a'_1} L^{a_1,a'_1}_{b_1} \sum_{\sigma_2\sigma
 
 \subsection{Sweep to the left}
 
-
+ \begin{equation}
+M^{\sigma_2}_{a_1,a^B_2}=M_{a1(\sigma_2a^B_2)}=\sum_{a^{'B}_2} B_{(\sigma_2a^B_2),a^{'B}_2} S_{a^{'B}_2}(V)_{a_1,a^{'B}_2}
+\end{equation}
 
 
 \end{document}
