--- a/doc/mps.tex
+++ b/doc/mps.tex
@@ -60,22 +60,31 @@ W^{\sigma_3,\sigma'_3}_{b_2,1} B^{\sigma'_3}_{a'_2},
 \end{equation}
 and from
 \begin{equation}
-\sum_{\sigma'_2,a'_1,a'_2,b_1,b_2} L^{a_1,a'_1}_{b_1} W^{\sigma_2,\sigma'_2}_{b_1,b_2} R_{b_2}^{a_2,a'_2} M^{\sigma'_2}_{a'_1,a'_2} - \lambda M^{\sigma_2}_{a_1,a_2}=0
+\sum_{\sigma'_2,a'_1,a'_2,b_1,b_2} L^{a_1,a'_1}_{b_1} W^{\sigma_2,\sigma'_2}_{b_1,b_2} R_{b_2}^{a_2,a'_2} M^{\sigma'_2}_{a'_1,a'_2}
+- \lambda M^{\sigma_2}_{a_1,a_2}=0
 \end{equation}
 obtain $M^{\sigma_2}_{a_1,a_2}$ and via an SVD $A^{\sigma_2}_{a_1,a'_2}$ where
  \begin{equation}
 M^{\sigma_2}_{a_1,a^B_2}=M_{(a1\sigma_2)a^B_2}=\sum_{a^{'A}_2} A_{(a1,\sigma_2),a^{'A}_2} S_{a^{'A}_2}(V^\dagger)_{a^{'A}_2,a_2}
 \end{equation}
 \begin{equation}
-L^{a_2,a'_2}_{b_2} = \sum_{a_1,b_1,a'_1} L^{a_1,a'_1}_{b_1} \sum_{\sigma_2\sigma'_2} A^{\sigma_2 *}_{a_1,a_2} W^{\sigma_2\sigma'_2}_{b_1,b_2}A^{\sigma'_2}_{a'_1,a'_2}
+L^{a_2,a'_2}_{b_2} = \sum_{a_1,b_1,a'_1} L^{a_1,a'_1}_{b_1} \sum_{\sigma_2\sigma'_2} A^{\sigma_2 *}_{a_1,a_2}
+W^{\sigma_2\sigma'_2}_{b_1,b_2}A^{\sigma'_2}_{a'_1,a'_2}
 \end{equation}
 
 \subsection{Sweep to the left}
 
+Recompute $B$ according to:
+
  \begin{equation}
-M^{\sigma_2}_{a_1,a^B_2}=M_{a1(\sigma_2a^B_2)}=\sum_{a^{'B}_2} B_{(\sigma_2a^B_2),a^{'B}_2} S_{a^{'B}_2}(V)_{a_1,a^{'B}_2}
+M^{\sigma_2}_{a_1,a^B_2}=M_{(\sigma_2a^B_2),a_1}=\sum_{a^{'B}_2} B_{(\sigma_2a^B_2),a^{'B}_2} S_{a^{'B}_2}(V^\dagger)_{a^{'B}_2,a_1}
 \end{equation}
 
+Compute $R$:
+\begin{equation}
+R^{a_{L-2},a'_{L-2}}_{b_{L-2}} = \sum_{a_{L-1},b_{L-1},a'_{L-1}}\sum_{\sigma_{L-1},\sigma'_{L-1}} B^{\sigma_{L-1}*}_{a_{L-2},a_{L-1}}
+W^{\sigma_{L-1},\sigma'_{L-1}}_{b_{L-2},b_{L-1}} B^{\sigma'_{L-1}}_{a'_{L-2},a'_{L-1}} R^{a_{L-1},a'_{L-1}}_{b_{L-1}}
+\end{equation}
 
 \end{document}
 %
