--- a/doc/mps.tex
+++ b/doc/mps.tex
@@ -53,10 +53,10 @@ W^{\sigma_2,\sigma'_{2}}_{b_1,1} B^{\sigma'_2}_{a'_1}
 \end{equation}
 
 Obtain $A_{\sigma_1,a'_1}$ with an SVD: $M^{\sigma_1}_{a_1} = \sum_{a'_1} A_{\sigma_1,a'_1} S_{a'_1} (V^\dagger)_{a'_1,a_1}$.
-Compute $L^{a_1,a'_1}_{b_1} = \sum_{\sigma_1,\sigma'_1} A^{\sigma_1 *}_{a_1} W^{\sigma_1,\sigma'_1}_{b_1} A^{\sigma'_1}_{a'_1}$.
+Compute $L^{a_1,a'_1}_{b_1} = \sum_{\sigma_1,\sigma'_1} A^{\sigma_1 *}_{0,a_1} W^{\sigma_1,\sigma'_1}_{b_1} A^{0,\sigma'_1}_{a'_1}$.
 \begin{equation}
-R_{b_2}^{a_2,a'_2} =  \sum_{\sigma_3,\sigma'_3} B^{\sigma_3 *}_{a_2}
-W^{\sigma_3,\sigma'_3}_{b_2,1} B^{\sigma'_3}_{a'_2},
+R_{b_2}^{a_2,a'_2} =  \sum_{\sigma_3,\sigma'_3} B^{\sigma_3 *}_{a_2,0}
+W^{\sigma_3,\sigma'_3}_{b_2,1} B^{\sigma'_3}_{a'_2,0},
 \end{equation}
 and from
 \begin{equation}
